		 callback delegate caused duplicate registrations in case a type implemented multiple closed versions
		 of the same abstraction (work item 20996).
		-[Core] Calling RegisterAll many times (i.e. in combination with RegisterManyForOpenGeneric) caused
		 severe performance problems (work item 21001).


Version 2.7.1 (v2.7.1 RTM) 2015-02-01

	Bug fixes:
		-[Core] In some special cases Simple Injector was not able to resolve generic types, where one of the
		 generic type arguments was deducible from the others using the generic type constraints
		 (work item 20994).
		-[Core] Decorators that contained two parameters of different closed-generic versions of the decorated
		 interface couldn't be registered (work item 20995).
		-[Core] Resolving an unregistered concrete type failed if it was registered as part of a collection
		 (work item 21000).


Version 2.7.0 (v2.7.0 RTM) 2015-01-15

	New features:
		-[Core] Added support for resolving IList<T> and ICollection<T>. (work item 20981)
		-[Core] Added support for resolving arrays. (work item 20982)
		-[Core] Added 'torn lifestyle' diagnostic warning (work item 20975).
		-[Core] Added 'disposable transient' diagnostic warning (work item 20957).
		-[Core] Added support for resolving assignable variant implementations in collections registered
		 with RegisterAll (work item 20984).
		-[Core] AppendToCollection extension methods now support open-generic types (work item 20985).
		-[WebApi] New RegisterWebApiControllers overload added to the SimpleInjectorWebApiExtensions class
		 that allows specifying the assemblies to search through. This is useful during testing where the
		 default IAssemblyResolver can't be used. (work item 20990).

	Bug fixes:
		-[Core] In case a constructor of a type contained a primitive dependency, while the type was resolved
		 as part of a collection or directly by building the Registration, the thrown exception message was
		 misleading. (work item 20986).

